web-service-consumer/2.0/modules/ROOT/pages/web-service-consumer-reference.adoc
= Web Service Consumer Connector 2.0 Reference 
:page-aliases: connectors::web-service/web-service-consumer-reference.adoc


Anypoint Connector for Web Service Consumer (Web Service Consumer Connector) consumes a SOAP Web service to acquire data from an external source.

Release Notes: xref:release-notes::connector/connector-wsc.adoc[Web Service Consumer Release Notes]

== Configurations
---
[[config]]
=== Config


Default configuration


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, Connection>>
 | The connection types to provide to this configuration. | | x
| Name a| String |  The identifier of this element used to reference it in other components. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types
[[config_connection]]
===== Connection


ConnectionProvider that returns instances of WscSoapClient.


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Soap Version a| Enumeration, one of:

** SOAP11
** SOAP12 |  The soap version of the WSDL. |  SOAP11 | 
| Mtom Enabled a| Boolean |  If should use the MTOM protocol to manage the attachments or not. |  false | 
| Encoding a| String |  Default character encoding to use in all the messages. If not specified, the default charset in the mule configuration will be used |  | 
| Transport Configuration a| One of:

* <<http-transport-configuration>>
* <<DefaultHttpTransportConfiguration>> |  The transport configuration used to dispatch the SOAP messages. |  | 
| Wsdl Location a| String |  The WSDL file URL remote or local. |  | x
| Service a| String |  The service name. |  | x
| Port a| String |  The port name. |  | x
| Address a| String |  The address of the web service. |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  | 
| Sign Security Strategy a| <<WssSignSecurityStrategyAdapter>> |  A sign WSS configuration |  | 
| Verify Signature Security Strategy a| <<WssVerifySignatureSecurityStrategyAdapter>> |  A verify signature WSS configuration |  | 
| Username Token Security Strategy a| <<WssUsernameTokenSecurityStrategyAdapter>> |  A usernameToken WSS configuration |  | 
| Outgoing Timestamp Security Strategy a| <<WssTimestampSecurityStrategyAdapter>> |  A timestamp WSS configuration |  | 
| Decrypt Security Strategy a| <<wss-decrypt-security-strategy>> |  A decrypt WSS configuration |  | 
| Encrypt Security Strategy a| <<WssEncryptSecurityStrategyAdapter>> |  an encrypt WSS configuration |  | 
| Incoming Timestamp Security Strategy a| <<WssIncomingTimestampSecurityStrategyAdapter>> |  A timestamp verification WSS configuration |  | 
| Must Understand a| Boolean |  Whether mustUnderstand attribute in wsse:Security header is true or false.  Defaults to true TODO (W-11800462): For the next major (v2.0.0) the default value should be false to match the SOAP protocol standard. |  true | 
| Actor a| String |  A SOAP message may travel from a sender to a receiver by passing different endpoints along the message path. The SOAP actor attribute is used to address the wsse:Security header to a specific endpoint.  This parameter values must be a URI. |  | 
| Security Headers Order a| Enumeration, one of:

** TimestampAtEnd
** TimestampAtStart |  Select the order of outgoing WS-Security tags. |  | 
|===

== Supported Operations
* <<consume>> 



== Operations

[[consume]]
=== Consume
`<wsc:consume>`


Consumes an operation from a SOAP Web Service.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Operation a| String |  The name of the web service operation that aims to invoke. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Body a| Binary |  The XML body to include in the SOAP message, with all the required parameters, or null if no params are required. |  `#[payload]` | 
| Headers a| Binary |  The XML headers to include in the SOAP message. |  | 
| Attachments a| Object |  The attachments to include in the SOAP request. |  | 
| Headers a| Object |  A group of transport headers that will be bounded with the transport request. |  | 
| Force XML Prolog into body a| Boolean |  If true, the XML Prolog statement will be appended to the request's body. |  false | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |  
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SoapOutputEnvelope>>
| Attributes Type a| <<SoapAttributes>>
|===

=== For Configurations
* <<config>> 

==== Throws
* WSC:SOAP_FAULT 
* WSC:EMPTY_RESPONSE 
* WSC:TIMEOUT 
* WSC:BAD_RESPONSE 
* WSC:BAD_REQUEST 
* WSC:CONNECTIVITY 
* WSC:CANNOT_DISPATCH 
* WSC:RETRY_EXHAUSTED 
* WSC:INVALID_WSDL 
* WSC:ENCODING 



== Types
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Reconnection strategy to use. |  | 
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread. |  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread. |  | 
|===

[[WssSignSecurityStrategyAdapter]]
=== WSS Sign Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when signing the message. |  | x
| Sign Algorithm Configuration a| <<WssSignConfigurationAdapter>> | The algorithms to use on the signing. |  | 
|===

[[wss-key-store-configuration]]
=== WSS Key Store Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Path a| String |  |  | x
| Alias a| String |  |  | x
| Password a| String | Password to authenticate against the proxy server. |  | x
| Key Password a| String |  |  | 
| Type a| String |  | jks | 
|===

[[WssSignConfigurationAdapter]]
=== WSS Sign Configuration Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Signature Key Identifier a| Enumeration, one of:

** ISSUER_SERIAL
** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER
** THUMBPRINT
** SKI_KEY_IDENTIFIER
** KEY_VALUE |  | ISSUER_SERIAL | 
| Signature Algorithm a| Enumeration, one of:

** RSAwithSHA256
** ECDSAwithSHA256
** DSAwithSHA1
** RSAwithSHA1
** RSAwithSHA224
** RSAwithSHA384
** RSAwithSHA512
** ECDSAwithSHA1
** ECDSAwithSHA224
** ECDSAwithSHA384
** ECDSAwithSHA512
** DSAwithSHA256 |  |  | 
| Signature Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA224
** SHA384
** SHA512 |  | SHA1 | 
| Signature C14n Algorithm a| Enumeration, one of:

** CanonicalXML_1_0
** CanonicalXML_1_1
** ExclusiveXMLCanonicalization_1_0 |  | ExclusiveXMLCanonicalization_1_0 | 
| Wss Parts a| Array of <<wss-part>> |  |  | 
|===

[[wss-part]]
=== WSS Part

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Encode a| Enumeration, one of:

** ELEMENT
** CONTENT |  | CONTENT | 
| Namespace a| String |  |  | x
| Localname a| String |  |  | x
|===

[[WssVerifySignatureSecurityStrategyAdapter]]
=== WSS Verify Signature Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Trust Store Configuration a| <<wss-trust-store-configuration>> | The truststore to use to verify the signature. |  | 
|===

[[wss-trust-store-configuration]]
=== WSS Trust Store Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Trust Store Path a| String |  |  | x
| Password a| String | Password to authenticate against the proxy server. |  | x
| Type a| String |  | jks | 
|===

[[WssUsernameTokenSecurityStrategyAdapter]]
=== Wss Username Token Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | The username required to authenticate with the service. |  | x
| Password a| String | The password for the provided username required to authenticate with the service. |  | x
| Password Type a| Enumeration, one of:

** DIGEST
** TEXT | A #password parameter. | TEXT | 
| Add Nonce a| Boolean | Specifies a if a cryptographically random nonce should be added to the message. | false | 
| Add Created a| Boolean | Specifies if a timestamp should be created to indicate the creation time of the message. | false | 
|===

[[WssTimestampSecurityStrategyAdapter]]
=== WSS Timestamp Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Time To Live a| Number | The time difference between creation and expiry time in the time unit specified in timeToLiveUnit. After this time
 the message is invalid.
 
 This parameter values must be greater or equal to 1 second (or similar in other unit). Values lower than 1 second will end up
 in 1 second timestamp. | 60 | 
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A #timeToLive parameter.
 
 Defaults to SECONDS | SECONDS | 
|===

[[wss-decrypt-security-strategy]]
=== WSS Decrypt Security Strategy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when decrypting the message. |  | x
|===

[[WssEncryptSecurityStrategyAdapter]]
=== WSS Encrypt Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when encrypting the message. |  | x
| Encryption Algorithms Configuration a| <<wss-encryption-algorithms-configuration>> |  |  | 
|===

[[wss-encryption-algorithms-configuration]]
=== WSS Encryption Algorithms Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Encryption Key Identifier a| Enumeration, one of:

** ISSUER_SERIAL
** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER
** THUMBPRINT
** SKI_KEY_IDENTIFIER
** ENCRYPTED_KEY_SHA1
** EMBEDDED_KEY_NAME |  | ISSUER_SERIAL | 
| Encryption Sym Algorithm a| Enumeration, one of:

** TRIPLE_DES
** AES_128
** AES_256
** AES_192
** AES_128_GCM
** AES_192_GCM
** AES_256_GCM |  | AES_128 | 
| Encryption Key Transport Algorithm a| Enumeration, one of:

** KEYTRANSPORT_RSA15
** KEYTRANSPORT_RSAOAEP
** KEYTRANSPORT_RSAOAEP_XENC11 |  | KEYTRANSPORT_RSAOAEP | 
| Encryption Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA384
** SHA512 |  | SHA1 | 
| Wss Part Adapters a| Array of <<wss-part>> |  |  | 
|===

[[WssIncomingTimestampSecurityStrategyAdapter]]
=== WSS Incoming Timestamp Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Future Time To Live a| Number | Specifies the time in the future within which the Created time of an incoming Timestamp is valid. The default value is "60",
 to avoid problems where clocks are slightly askew. To reject all future-created Timestamps, set this value to "0". | 60 | 
| Future Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A #futureTimeToLive parameter.
 
 Defaults to SECONDS | SECONDS | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[SoapOutputEnvelope]]
=== SOAP Output Envelope

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attachments a| Object |  |  | 
| Body a| Binary |  |  | 
| Headers a| Object | Map of HTTP headers in the message. |  | 
|===

[[SoapAttributes]]
=== SOAP Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Protocol Headers a| Object | The protocol headers bundled in the response. |  | x
| Additional Transport Data a| Object | The additional transport data bundled in the response. |  | x
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | Source of the error. |  | 
| Target a| String | Target of the error. |  | x
|===

[[http-transport-configuration]]
=== HTTP Transport Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Requester Config a| String |  |  | x
|===

[[DefaultHttpTransportConfiguration]]
=== Default HTTP Transport Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Timeout a| Number |  | 5000 | 
|===
